# Chatbot_assignment

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
backend/: agent.py  main.py  tools.py
backend/data/: faq.json  orders.json  products.json
frontend/: app.py
